# obs-backgroundremoval

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REUSE.toml  requirements-build.txt  vcpkg-configuration.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/extract-buildspec/: action.yml
.github/actions/extract-vcpkg-configuration/: action.yml
.github/actions/setup-ccache/: action.yml  generate-checksums.sh
.github/actions/setup-ccache/verify-js/: base64.mjs  index.mjs  minisign-verify-cli.mjs  minisign.mjs
.github/actions/setup-macos-codesigning/: action.yml
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/instructions/: gh-aw-no-review-lockfiles.instructions.md  github-actions.instructions.md  license-header-c-cpp.instructions.md  onnxruntime-in-c-cxx.instructions.md  plugin-metadata.instructions.md
.github/scripts/: clean-env-macos.bash  clean-env-ubuntu.bash  clean-env-windows.ps1
.github/workflows/: build-project.yaml  check.yml  dependencies-vcpkg.lock.yml  dependencies-vcpkg.md  ort-build-macos.yml  ort-build-ubuntu.yml  ort-build-windows.yml  ort.yml  pages.yml  plugin-build-macos.yml  plugin-build-ubuntu.yml  plugin-build-windows.yml  plugin-release.yml  plugin.yml  pr-validation.lock.yml  pr-validation.md  push.yaml  validate-pr.lock.yml  validate-pr.md
cmake/: DownloadOnnxruntime.cmake
cmake/common/: bootstrap.cmake  compiler_common.cmake  helpers_common.cmake  onnxruntime.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake
cmake/macos/: compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/windows/: defaults.cmake
data/effects/: mask_alpha_filter.effect
data/locale/: en-US.ini
pages/: REUSE.toml  package-lock.json  package.json
pages/src/lib/: info.ts
pages/src/pages/: index.astro  windows.astro
pages/src/pages/versions/: [version].astro
pages/src/styles/: global.css
scripts/: build_libobs_macos.sh  build_libobs_windows.ps1  build_ort_macos.sh  build_ort_ubuntu.sh  build_ort_windows.ps1  build_ort_windows_x64.ps1  convert_selfie_multiclass.py  download_deps.cmake  lipo_vcpkg_macos.sh  package_plugin_windows.ps1  setup_macos.sh
scripts/ort_patches/: 27960.patch  27981.patch  27982.patch  REUSE.toml
scripts/windows/: How to install plugin on Windows.txt  remove-old-installation.bat
src/: DelayLoad.cpp  FilterData.h  background-filter-info.c  background-filter.cpp  background-filter.h  consts.h  enhance-filter-info.c  enhance-filter.cpp  enhance-filter.h  exported_symbols_windows.def  plugin-main.c  plugin-support.c.in  plugin-support.h  required_operators_and_types.with_runtime_opt.config  required_operators_and_types.with_runtime_opt.config.license
src/models/: Model.h  ModelCorridorKey.hpp  ModelMediapipe.h  ModelPPHumanSeg.h  ModelRMBG.h  ModelRVM.h  ModelSINET.h  ModelSelfie.h  ModelSelfieMulticlass.h  ModelTBEFN.h  ModelTCMonoDepth.h  ModelURetinex.h  ModelZeroDCE.h
src/obs-utils/: obs-config-utils.cpp  obs-config-utils.h  obs-utils.cpp  obs-utils.h
src/ort-utils/: ORTModelData.h  ort-session-utils.cpp  ort-session-utils.h
src/update-checker/: Client.hpp  github-utils.cpp  github-utils.h  update-checker.cpp  update-checker.h
src/update-checker/CurlClient/: CurlClient.cpp
vcpkg-triplets/: REUSE.toml  arm64-osx-obs-asan.cmake  x64-linux-obs-asan.cmake  x64-osx-obs-asan.cmake  x64-windows-static-md-obs-asan.cmake
